# LumaCore

./: .clangd  .editorconfig  .gitattributes  .gitignore  .qmllint.ini  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  NOTICE  README.md
.github/workflows/: build.yml  tests.yml
app/: CMakeLists.txt  DaemonLauncher.cpp  DaemonLauncher.h  DaemonScheduleBridge.cpp  DaemonScheduleBridge.h  GuiApplication.cpp  GuiApplication.h  GuiOptions.cpp  GuiOptions.h  ProfileScheduleRunner.cpp  ProfileScheduleRunner.h  QmlHost.cpp  QmlHost.h  TrayController.cpp  TrayController.h  Version.h  VrrFlickerGuard.cpp  VrrFlickerGuard.h  lumacore.rc.in  main.cpp
backends/: CMakeLists.txt
backends/asus/: AsusAuraHidBackend.cpp  AsusAuraHidBackend.h  AsusAuraHidDevice.cpp  AsusAuraHidDevice.h  AsusAuraHidPlatform.h
backends/auto/: AutoBackend.cpp  AutoBackend.h
backends/daemon/: DaemonBackend.cpp  DaemonBackend.h  DaemonRgbDevice.cpp  DaemonRgbDevice.h
backends/linux/: LinuxDiscoveredDevice.cpp  LinuxDiscoveredDevice.h  LinuxDiscoveryBackend.cpp  LinuxDiscoveryBackend.h
backends/mock/: MockBackend.cpp  MockBackend.h  MockRgbDevice.cpp  MockRgbDevice.h
backends/windows/: WindowsDiscoveredDevice.cpp  WindowsDiscoveredDevice.h  WindowsDiscoveryBackend.cpp  WindowsDiscoveryBackend.h
core/: ActivityLog.cpp  ActivityLog.h  BackendCapabilities.h  BackendDiscoveryRunner.cpp  BackendDiscoveryRunner.h  BackendRegistry.cpp  BackendRegistry.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  EffectsEngine.cpp  EffectsEngine.h  PermissionGate.cpp  PermissionGate.h  PortablePaths.cpp  PortablePaths.h  ProfilePlan.cpp  ProfilePlan.h  ProfileStore.cpp  ProfileStore.h  RgbBackend.cpp  RgbBackend.h  RgbColor.cpp  RgbColor.h  RgbDevice.cpp  RgbDevice.h  RgbEffect.cpp  RgbEffect.h  RgbLed.cpp  RgbLed.h  RgbZone.cpp  RgbZone.h  SafetyDefaults.h  ScheduleService.cpp  ScheduleTime.cpp  ScheduleTime.h  WriteGate.cpp  WriteGate.h
daemon/: CMakeLists.txt  DaemonOptions.cpp  DaemonOptions.h  ScheduleService.cpp  ScheduleService.h  main.cpp
docs/: architecture.md  hardware-safety.md  linux-package.md  profile-format.md  refactor-parity.md  release-verification.md  roadmap.md  windows-preview.md
docs/daemon/: protocol.md
docs/hardware/: asus-aura-hid.md  contributing-hardware.md  discovery-catalog.md
docs/packaging/: systemd.md
hardware/asus/: AsusAuraHidProtocol.cpp  AsusAuraHidProtocol.h
hardware/common/: ProbeResultCommon.cpp  ProbeResultCommon.h  ProbeTypes.h  RgbControllerCatalog.h
hardware/linux/: AsusAuraHidConfig.cpp  AsusAuraHidProtocol.cpp  AsusAuraHidProtocol.h  HidDeviceWriter.cpp  HidDeviceWriter.h  HidapiProbe.cpp  HidapiProbe.h  I2cDevProbe.cpp  I2cDevProbe.h  LibusbProbe.cpp  LibusbProbe.h  ProbeResult.cpp  ProbeResult.h
hardware/windows/: HidDeviceWriter.cpp  HidDeviceWriter.h  HidapiProbe.cpp  HidapiProbe.h  ProbeResult.cpp  ProbeResult.h
ipc/: CMakeLists.txt  DaemonClient.cpp  DaemonClient.h  DaemonFrameCodec.cpp  DaemonFrameCodec.h  DaemonProtocol.cpp  DaemonProtocol.h  DaemonServer.cpp  DaemonServer.h
packaging/: lumacore.desktop.in
packaging/linux/: lumacore.desktop  lumacore.desktop.in
packaging/systemd/: lumacore-daemon.service  lumacore-daemon.service.in
packaging/windows/: package.ps1
scripts/: generate-icons.py
tests/: AppControllerTest.cpp  AsusAuraHidBackendTest.cpp  AsusAuraHidProtocolTest.cpp  AsyncDiscoveryTest.cpp  AutoBackendTest.cpp  CMakeLists.txt  DaemonEndToEndTest.cpp  DaemonFrameCoalescingTest.cpp  DaemonFrameCodecTest.cpp  DaemonLaunchFixture.cpp  DaemonLauncherTest.cpp  DaemonProtocolTest.cpp  DaemonScheduleBridgeTest.cpp  DaemonServerFailurePathTest.cpp  DaemonWriteDispatchTest.cpp  DeviceManagerWriteGateTest.cpp  DeviceTreeModelTest.cpp  EffectsEngineTest.cpp  GlobalOperationReportTest.cpp  MockBackendTest.cpp  NoSyncDaemonCallGuard.cmake  OptionParsingTest.cpp  ProbeResultTest.cpp  ProfilePersistenceTest.cpp  ProfileScheduleRunnerTest.cpp  ProfileStoreImportTest.cpp  RgbEffectTest.cpp  ScheduleServiceTest.cpp  SettingsControllerTest.cpp
ui/: AppController.cpp  AppController.h  CMakeLists.txt  DeviceGroupStore.cpp  DeviceGroupStore.h  DeviceListModel.cpp  DeviceListModel.h  DeviceTreeModel.cpp  DeviceTreeModel.h  SettingsController.cpp  SettingsController.h  ZoneEffectPreferenceStore.cpp  ZoneEffectPreferenceStore.h  ZoneListModel.cpp  ZoneListModel.h
ui/qml/: AboutDialog.qml  Main.qml  Theme.qml
ui/qml/components/: ActivityLogPanel.qml  AllOffConfirmationDialog.qml  AppButton.qml  AppSlider.qml  AppSpinBox.qml  AppSwitch.qml  BackendInfoDialog.qml  BackendStatusChip.qml  ColorPickerDialog.qml  DeviceTreePanel.qml  DeviceWorkspacePanel.qml  EffectSelector.qml  GlobalControls.qml  NavIcon.qml  NavItem.qml  NavRail.qml  OperationResultDialog.qml  PillLabel.qml  ProfileManager.qml  RainbowGradient.qml  SectionCard.qml  SettingsPage.qml  SetupStatusPanel.qml  Sidebar.qml  ZoneEditor.qml
